# teyit

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE.txt  README.md  ex.py  setup.cfg  teyit.py
.github/workflows/: fuzz.yml  main.yml  pre-commit.yml  publish.yml  test.yml
tests/: test_teyit.py
tests/cosmetic/assert_statements/: input.py  output.py
tests/cosmetic/literals/: input.py  output.py
tests/cosmetic/multi_line_comment/: input.py  output.py
tests/cosmetic/single_line_comment/: input.py  output.py
