[metadata]
name = teyit
version = 0.3.2
description = Unittest assertion formatter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isidentical/teyit
author = isidentical
author_email = isidentical@gmail.com
license_file = LICENSE.txt

[options]
py_modules = teyit
install_requires =
    refactor==0.4.0
python_requires = >=3.9

[options.entry_points]
console_scripts =
    teyit = teyit:main
