[metadata]
name = teyit
version = 0.4.1
description = Unittest assertion formatter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isidentical/teyit
author = isidentical
author_email = isidentical@gmail.com
license_file = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
py_modules = teyit
install_requires =
    refactor==0.4.1
python_requires = >=3.9

[options.entry_points]
console_scripts =
    teyit = teyit:main
